# route/user.js
@@ -1,10 +1,11 @@
 const express = require('express');
 const router = express.Router();
 
-const {signup, login, logout} = require('../controller/userController');
+const {signup, login, logout, forgotPassword} = require('../controller/userController');
 
 router.route('/signup').post(signup);
 router.route('/login').post(login);
 router.route('/logout').get(logout);
+router.route('/forgotpassword').post(forgotPassword);
 
 module.exports = router;
